# playground

./: Cargo.toml  README.md  rustfmt.toml
crates/async-runtime/: Cargo.toml
crates/async-runtime/src/: lib.rs
crates/boyer-moore/: Cargo.toml
crates/boyer-moore/src/: lib.rs
crates/foo/: Cargo.toml
crates/foo/src/: main.rs
crates/knuth-morris-pratt/: Cargo.toml
crates/knuth-morris-pratt/src/: lib.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/naive-bayes/: Cargo.toml
crates/naive-bayes/src/: lib.rs
crates/utf-encoding/: Cargo.toml
crates/utf-encoding/src/: lib.rs
crates/web-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
crates/web-server/migrations/: 20260511174543_init.sql
crates/web-server/setup/: seed.sql
crates/web-server/src/: main.rs
crates/web-server/src/handler/: idempotency.rs  mod.rs  ratelimiter.rs  websocket.rs
crates/web-server/tests/: idempotency.rs
