[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
redis = { version = "1.2.1", features = ["connection-manager", "tokio-comp"] }
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.29.0"
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
uuid = { version = "1.23.1", features = ["v4"] }

[features]
# As tests run against a running app, the test flag isn't set. A custom feature
# enables the equivalent control of test-only logic.
testing = []
