[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
redis = { version = "1.3.0", features = ["connection-manager", "tokio-comp"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["rustls"] }

[profile.release]
opt-level = 3
strip = true
lto = true
